// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-alert should be rendered without props 1`] = `
<div
  className="
          alert
          type-info
          
        "
>
  <span
    className="text"
  >
    Notification
  </span>
  <div
    className="close"
    onClick={[Function]}
  >
    ×
  </div>
</div>
`;

exports[`fyndiq-component-alert should be self-closable 1`] = `
<div
  className="
          alert
          type-info
          hidden
        "
>
  <span
    className="text"
  />
  <div
    className="close"
    onClick={[Function]}
  >
    ×
  </div>
</div>
`;

exports[`fyndiq-component-alert should have a type prop 1`] = `
<div
  className="
          alert
          type-warning
          
        "
>
  <span
    className="text"
  >
    Warning
  </span>
  <div
    className="close"
    onClick={[Function]}
  >
    ×
  </div>
</div>
`;

exports[`fyndiq-component-alert should have a type prop 2`] = `
<div
  className="
          alert
          type-good
          
        "
>
  <span
    className="text"
  >
    Good
  </span>
  <div
    className="close"
    onClick={[Function]}
  >
    ×
  </div>
</div>
`;

exports[`fyndiq-component-alert should have a type prop 3`] = `
<div
  className="
          alert
          type-bad
          
        "
>
  <span
    className="text"
  >
    Bad
  </span>
  <div
    className="close"
    onClick={[Function]}
  >
    ×
  </div>
</div>
`;
